--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -79,8 +79,9 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "PT Serif", serif;
   font-size: 3.25rem;
+  font-weight: bold;
 }
 
 /* Sidebar nav */
