--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -249,3 +249,11 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .related-posts li a:hover {
   color: #8f5536;
 }
+
+/* Ashes */
+.theme-base-ash .sidebar {
+  background-color: #1c2023;
+}
+.theme-base-ash .content a,
+.theme-base-ash .related-posts li a:hover {
+  color: #95aec7;
