Update _config.yml, hyde.css, sample post

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -256,4 +256,4 @@ a.sidebar-nav-item:focus {
 }
 .theme-base-ash .content a,
 .theme-base-ash .related-posts li a:hover {
-  color: #95aec7;
+  color: #376689;
