First rough version, from LXDE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="theme-base-ash">
+  <body class="theme-base-ash {% if page.title == "Home" %} bg{% endif %}">
 
     {% include sidebar.html %}
 
