--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,16 +8,14 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
-	
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
+    <nav class="sidebar-nav">
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
         `layout: page` in the front-matter. See readme for usage.
       {% endcomment %}
 
-      {% assign pages_list = site.pages %}
+      {% assign pages_list = site.pages | sort:"order" %}
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
@@ -29,11 +27,16 @@
     </nav>
 
 	<div class="social-icons">
-		<a href="https://twitter.com/rewberl" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+        <a href="https://twitter.com/rewberl" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
 <!--		<a href="https://linkedin.com/in/rewberl" title="{{ site.owner.name}} on LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>	-->
 		<a href="https://github.com/rewberl" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+        <i class="fa fa-ellipsis-h fa-lg"></i>
+		<a href="https://scholar.google.com/citations?user=9TFJPiMAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>
+        <a href="https://colostate.academia.edu/RichardBerl" target="_blank"><i class="ai ai-academia-square ai-2x"></i></a>
+        <a href="https://www.researchgate.net/profile/Richard_Berl" target="_blank"><i class="ai ai-researchgate-square ai-2x"></i></a>
+
 	</div><!-- /.social-icons -->
-	
+
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
