Add Google Analytics and Add Content to Resources Page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/rewberl.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans|PT+Serif|PT+Mono">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/public/css/academicons.min.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/academicons.min.css" />
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ site.baseurl }}public/apple-touch-icon-precomposed.png">
