--- a/public/css/rewberl.css
+++ b/public/css/rewberl.css
@@ -1,13 +1,3 @@
-.social-icons {
-  margin: 1em 0;
-  a {
-    padding: 4px 8px;
-    &:hover {
-      color: #376689;
-    }
-  }
-}
-
 body.bg {
   background: url(/public/img/darwin-notebook-crop.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -18,6 +8,30 @@ body.bg {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
   -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
 }
+
+.social-icons {
+  margin: 1em 0;
+  a {
+    padding: 4px 8px;
+    &:hover {
+      color: #376689;
+    }
+  }
+}
+
+.circular {
+	width: 100px;
+	height: 100px;
+	border-radius: 50px;
+	-webkit-border-radius: 50px;
+	-moz-border-radius: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto 100px;
+	}
+
+/*    Usage:    */
+/*    <div class="circular" style="background-image: url(http://99percentinvisible.org/wp-content/uploads/2016/01/99PISocialShareImage_V1.jpg)"></div>    */
 
 code,
 pre {
