--- a/public/css/rewberl.css
+++ b/public/css/rewberl.css
@@ -1,3 +1,21 @@
+h5 {
+  margin-bottom: .5rem;
+  font-weight: bold;
+  line-height: 1.25;
+  text-rendering: optimizeLegibility;
+  margin-top: 1rem;
+  font-size: 0.85rem;
+}
+
+h6 {
+  margin-bottom: .5rem;
+  font-weight: bold;
+  line-height: 1.25;
+  text-rendering: optimizeLegibility;
+  margin-top: 1rem;
+  font-size: 0.7rem;
+}
+
 body.bg {
   background: url(/public/img/darwin-notebook-crop.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -45,4 +63,24 @@ pre {
 .page-title,
 .post-title {
   font-family: "PT Serif", serif;
+}
+
+table {
+  margin-bottom: 1rem;
+  width: 100%;
+  border: 0px;
+  border-collapse: collapse;
+}
+td,
+th {
+  padding: .25rem 0rem;
+  border: 0px;
+}
+tbody tr:nth-child(odd) td,
+tbody tr:nth-child(odd) th {
+  background-color: #fff;
+}
+
+.boxes {
+    display: none;
 }
