Attempt to fix CSS problems

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,17 +15,17 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/rewberl.css">
+  <link rel="stylesheet" href="{{ "public/css/poole.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "public/css/syntax.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "public/css/hyde.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "public/css/rewberl.css" | relative_url }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans|PT+Serif|PT+Mono">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/academicons.min.css" />
+  <link rel="stylesheet" href="{{ "public/css/academicons.min.css" | relative_url }}">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ site.baseurl }}public/apple-touch-icon-precomposed.png">
-                                 <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ "public/apple-touch-icon-precomposed.png" | relative_url }}">
+                                 <link rel="shortcut icon" href="{{ "public/favicon.ico" | relative_url }}">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
