Update FontAwesome to 5.0.13

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="{{ "public/css/hyde.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "public/css/rewberl.css" | relative_url }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans|PT+Serif|PT+Mono">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ "public/css/academicons.min.css" | relative_url }}">
 
   <!-- Icons -->
