--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,10 +27,10 @@
     </nav>
 
 	<div class="social-icons">
-        <a href="https://twitter.com/rewberl" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+        <a href="https://twitter.com/rewberl" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
 <!--		<a href="https://linkedin.com/in/rewberl" title="{{ site.owner.name}} on LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>	-->
-		<a href="https://github.com/rewberl" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
-        <i class="fa fa-ellipsis-h fa-lg"></i>
+		<a href="https://github.com/rewberl" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+        <i class="fas fa-ellipsis-h fa-lg"></i>
 		<a href="https://scholar.google.com/citations?user=9TFJPiMAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>
         <a href="https://colostate.academia.edu/RichardBerl" target="_blank"><i class="ai ai-academia-square ai-2x"></i></a>
         <a href="https://www.researchgate.net/profile/Richard_Berl" target="_blank"><i class="ai ai-researchgate-square ai-2x"></i></a>
